Add overview screen

--- a/Visualizer/iOS/Info.plist
+++ b/Visualizer/iOS/Info.plist
@@ -44,5 +44,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Csak mert</string>
 </dict>
 </plist>
